Fix mobile whitespace for stats
On mobile, there was too much whitespace below the
logo compared to the whitespace above the headline.
The 99.999 stat is getting cut off such that I only
saw half of the third 9.

The fix made the whitespace symmetric and made the
last 9 in 99.999 visible.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1857,6 +1857,10 @@ video {
   padding-top: 6rem;
 }
 
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -2459,6 +2463,10 @@ video {
     margin-top: 5rem;
   }
 
+  .sm\:mt-12 {
+    margin-top: 3rem;
+  }
+
   .sm\:grid {
     display: grid;
   }
@@ -2473,6 +2481,10 @@ video {
 
   .sm\:grid-cols-6 {
     grid-template-columns: repeat(6, minmax(0, 1fr));
+  }
+
+  .sm\:gap-8 {
+    gap: 2rem;
   }
 
   .sm\:gap-x-10 {
